resolved comments and restructured code
